--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,170 @@
     padding: 0;
     font-family: 'Balsamiq Sans', cursive;
 }
+
+.container {
+    width: 100%;
+    height: 100vh;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(img/bg.png);
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+    padding-left: 8%;
+    padding-right: 8%;
+    box-sizing: border-box;
+    overflow: hidden;
+}
+
+.navbar {
+    height: 12%;
+    display: flex;
+    align-items: center;
+}
+
+.logo {
+    width: 90px;
+    cursor: pointer;
+}
+
+.menu-icon{
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+    margin-left: 40px;
+}
+
+nav{
+    flex: 1;
+    text-align: right;
+}
+
+nav ul li{
+    list-style: none;
+    display:inline-block;
+    margin-left: 60px;
+}
+
+nav ul li a{
+    text-decoration: none;
+    color: #ffffff;
+    font-size: 130%;
+}
+
+nav ul li a:hover{
+    color: #62d4fd;
+    font-size: 135%;
+
+}
+
+.navbar li {
+    display:inline-block;
+    position:relative;
+}
+.down::after{
+    margin-left: 8px;
+}
+
+.submenu li a{
+    color: #7f7f7f;
+    font-size: 19px;
+    line-height: 36px;
+    padding: 0px 25px;
+    position: relative;
+    right: 60px;
+    transform: .4s ease-in-out;
+}
+.navbar li a:hover{
+    color: #E6855F;
+}
+
+.submenu{
+    background: rgba(255, 255, 255, 0.8);
+    border: 2px solid #003539;
+    position: absolute;
+    left:0;
+    visibility: hidden;
+    opacity: 0;
+    z-index: 5;
+    width: 100%;
+    transform: perspective(600px) rotateX(-90deg);
+    transform-origin: 0% 0%;
+    transition: .6s ease-in-out;
+
+}
+
+.navbar li:hover .submenu{
+    visibility:visible;
+    opacity: 1;
+    transform: perspective(600px) rotateX(8deg);
+}
+.row{
+    display: flex;
+    height: 80%;
+    align-items: center;
+}
+
+.col{
+    flex-basis: 50%;
+}
+
+h1{
+    color: #fff;
+    font-size: 380%;
+}
+
+p{
+    color: rgba(209, 209, 209, 0.9);
+    font-size: 100%;
+    line-height: 20px;
+}
+
+button{
+    width: 200px;
+    height: 40px;
+    font-size: 15px;
+    font-weight: 800;
+    background: white;
+    border: 0;
+    border-radius: 20px;
+    outline: none;
+    margin-top: 10px;
+}
+
+button:hover{
+    background: yellow;
+}
+
+.card{
+    width: 200px;
+    height: 250px;
+    display: inline-block;
+    border-radius: 20px;
+    padding: 15px 25px;
+    cursor: pointer;
+    margin: 10px 10px;
+    background-position: center;
+    background-size: cover;
+    transition: transform 0.5s;
+}
+
+.card1{
+    background-image: url(img/films/aquaman.jpg)
+}
+.card2{
+    background-image: url(img/films/joker.jpg)
+}
+.card3{
+    background-image: url(img/films/parker.jpg)
+}
+.card4{
+    background-image: url(img/films/titanic.jpg)
+}
+
+.card:hover{
+    transform: translateY(-10px);
+}
+
+h5{
+    color: white;
+    text-shadow: 0 0 5px #000000;
+}
