--- a/css/films.css
+++ b/css/films.css
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Balsamiq Sans', cursive;
+    font-family: 'Montserrat Alternates', sans-serif;
 }
 
 .container {
@@ -28,83 +28,75 @@
     cursor: pointer;
 }
 
-.menu-icon{
+.menu-icon {
     width: 30px;
     height: 30px;
     cursor: pointer;
     margin-left: 40px;
 }
 
-nav{
+nav {
     flex: 1;
     text-align: right;
 }
 
-nav ul li{
+nav ul li {
     list-style: none;
-    display:inline-block;
+    display: inline-block;
     margin-left: 60px;
 }
 
-nav ul li a{
+nav ul li a {
     text-decoration: none;
     color: #ffffff;
     font-size: 130%;
 }
 
-nav ul li a:hover{
+nav ul li a:hover {
     color: #62d4fd;
     font-size: 135%;
 }
 
-.row{
+.row {
     display: flex;
     height: 80%;
     align-items: center;
 }
 
-.col{
-    flex-basis: 50%;
-}
-
-h1{
-    color: #fff;
-    font-size: 380%;
-}
-
-h5{
+h5 {
     color: white;
     font-size: 80px;
-    margin-top:6px ;
+    margin-top: 3px;
     margin-left: 10px;
-
 }
 
-p{
-color: aliceblue;
-margin-top: 3px;
-margin-left: 10px;
-font-size: 20px;
-width: 650px;
-height: 280px;
-overflow: auto;
-white-space: pre-line;
+p {
+    color: white;
+    margin-top: 3px;
+    margin-left: 10px;
+    font-size: 20px;
+    width: 650px;
+    height: 280px;
+    white-space: pre-line;
+    overflow: auto;
+    text-overflow: ellipsis;
 }
-.card img{
-    width:500px;
-    height:650px;
+
+.card img {
+    width: 400px;
+    height: 550px;
+    padding: 15px 25px;
     box-sizing: border-box;
     position: relative;
 }
 
-.info{
+.info {
     position: relative;
     bottom: ;
+    left: ;
     width: 700px;
     height: 400px;
-    border-color: rgba(206, 255, 0, 0.8);
-    border: 4px solid rgba(49, 49, 49, 0.8);
-    position: relative
-
+    background-color: rgba(124, 124, 124, 0.62);
+    border: 10px solid rgba(255, 255, 255, 0.42);
+    box-shadow: 0 0 6px #A9A9A9;
 }
-
