--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Balsamiq Sans', cursive;
+    font-family: 'Montserrat Alternates', sans-serif;
 }
 
 .container {
@@ -55,50 +55,52 @@ nav ul li a{
 nav ul li a:hover{
     color: #62d4fd;
     font-size: 135%;
-
 }
 
 .navbar li {
-    display:inline-block;
-    position:relative;
+    display: inline-block;
+    position: relative;
 }
-.down::after{
+
+.down:after{
     margin-left: 8px;
 }
 
 .submenu li a{
     color: #7f7f7f;
-    font-size: 19px;
+    font-size: 18px;
     line-height: 36px;
     padding: 0px 25px;
     position: relative;
     right: 60px;
-    transform: .4s ease-in-out;
+    transition: .4s ease-in-out;
 }
+
 .navbar li a:hover{
-    color: #E6855F;
+    color: #E6855F
 }
 
 .submenu{
-    background: rgba(255, 255, 255, 0.8);
+    background: rgba(0,0,0,0.8);
     border: 2px solid #003539;
     position: absolute;
-    left:0;
+    left: 0;
     visibility: hidden;
     opacity: 0;
     z-index: 5;
-    width: 100%;
+    width: 150px;
     transform: perspective(600px) rotateX(-90deg);
     transform-origin: 0% 0%;
-    transition: .6s ease-in-out;
-
+    transition: .6s ease-in-out
 }
 
-.navbar li:hover .submenu{
-    visibility:visible;
+
+.navbar li:hover .submenu {
+    visibility: visible;
     opacity: 1;
-    transform: perspective(600px) rotateX(8deg);
+    transform: perspective(600px) rotateX(0deg);
 }
+
 .row{
     display: flex;
     height: 80%;
